feat: add preview & release

--- a/docs/guide/index.mdx
+++ b/docs/guide/index.mdx
@@ -1,52 +1,41 @@
-### 银行家舍入法
+# YK-TABLE
 
-toFixed经常被用来保留指定位数的小数，我很长一段时间都认为其遵循四舍五入原则，实际上并不是，它遵循的实际上是"银行家舍入法"。
+## YK-TABLE
 
-其实用一句话就可以概括：四舍六入五成双。
+基于 Element-UI Table 组件封装的表格组件，可无缝支持 element 的 table 组件。
 
-#### 详细算法如下：
+这个组件主要是为了将每次写table时那些重复的代码放在组件内部，使用时通过配置的方式去定制table。
 
-- 保留位数的后一位如果小于5，则舍去。
-- 保留位数的后一位如果大于5，则进上去。
-- 保留位数的后一位如果是5
-  - 且5后面仍有数，则无论奇偶都要进入。
-  - 若5后面不再有数，要根据尾数“5”的前一位决定: 如果是奇数则进入，如果是偶数则舍去。
+### 基本使用
 
-举个例子：(以保留两位小数为例)
+首先是完全支持与 el-table 相同的使用方式的，就是说如果你直接把原来写的 <el-table></el-table> 只改个标签名，改为 <yk-table></yk-table>，也是能正常渲染的，传参、事件都完全兼容。
+
+#### 使用姿势
 
 ```js
-5.214 ≈ 5.21（4小于5）
-5.216 ≈ 为5.22（6大于5）
-5.2254 ≈ 5.23（5后面有数，进入）
-5.215 ≈ 5.22（5后面没数，前一位1是奇数，进入）
-5.225 ≈ 5.22（5后面没数，前一位2是偶数，舍弃）
+<template>
+  <yk-table
+    border
+    :data="tableData"
+    :columns="columns"
+  ></yk-table>
+</template>
+
+<script>
+export default {
+  data() {
+    return {
+      tableData: [
+        {id: 1, name: "Niko"},
+        {id: 2, name: "Nikola"},
+        {id: 3, name: "Nikolala"}
+      ],
+      columns: [
+        {label: "编号", value: "id"},
+        {label: "姓名", value: "name"}
+      ]
+    }
+  },
+}
+</script>
 ```
-
-目前，大部分编程语言都是默认使用“奇进偶舍”，比如C/C++、JavaScript、PHP、Go等。
-
-#### 使用JS测试：
-
-```js
-(5.214).toFixed(2);
-('5.21');
-(5.216).toFixed(2);
-('5.22');
-(5.2254).toFixed(2);
-('5.23');
-(5.215).toFixed(2);
-('5.21');
-(5.225).toFixed(2);
-('5.22');
-```
-
-结果发现 5.215 并没有约等于 5.22，而是约等于 5.21。
-这里其实是因为 **浮点数精度问题导致的误差**。
-
-```js
-(5.215).toPrecision(17);
-('5.2149999999999999');
-```
-
-5.215底层是5.214999……，那么此时按照奇进偶舍的规则，第三位4小于5直接舍弃，就成了5.21。
-
-看到一些说法是不同浏览器内核对toFixed的实现会有一些出入，这里仅作为个人记录。
